--- a/components.json
+++ b/components.json
@@ -1,13 +1,13 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "default",
+  "style": "new-york",
   "rsc": true,
   "tsx": false,
   "tailwind": {
-    "config": "tailwind.config.mjs",
+    "config": "tailwind.config.js",
     "css": "app/globals.css",
     "baseColor": "gray",
-    "cssVariables": false,
+    "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
